--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "axios": "^1.9.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
