--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.9.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
+    "jsbarcode": "^3.12.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.511.0",
