--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsbarcode": "^3.12.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
