--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fe-basmalah-plastik",
-  "version": "0.1.0",
+  "version": "1.0.7",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -24,8 +24,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "prebuild": "node scripts/generate-version.js",
     "build": "react-scripts build",
+    "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "flowbite-react patch && flowbite-react register"
