--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-idle-timer": "^5.7.2",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.1.0",
